@startuml AIJobApply_UML

package "AIJobApply" {

    class JobProcessor {
        - notion : Notion
        - openai : Openai
        - email_handler : EmailHandler
        + filter_jobs_by_status(jobs: list, status: str): list
        + process_new_jobs(new_jobs: list): list
        + process_email_ready_jobs(email_ready_jobs: list): list
        + process_email_approved_jobs(email_approved_jobs: list): list
        + process_jobs(): void
    }
    
    class EmailHandler {
        + send(content: str, email: str, subject: str): void
    }
    
    class Notion {
        - notion_url : str
        - headers : dict
        - contacts_id : str
        - jobs_id : str
        + create_payload(filter: dict): dict
        + get_pages(database_id: str, filter: dict): dict
        + create_pages(database_id: str, properties: dict): dict
        + update_page(record_id: str, properties: dict, parent?: dict): dict
        + update_jobs(jobs_to_update: list): void
    }
    
    class Openai {
        - api_key : str
        - model : str
        + query_prompt(prompt: str): str
        + find_email(contact_details: str): str
        + prepare_application(templates: dict, description: str, contact_details: str, job_link: str): dict
    }
    
    class NotionAPIError {
        + __init__(message?: str)
    }

    JobProcessor --> Notion : uses
    JobProcessor --> Openai : uses
    JobProcessor --> EmailHandler : uses
}
@enduml
